# CrewMeal

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  SUPPORT.md  azure.yaml  docker-entrypoint.sh  pyproject.toml
.azure/: deployment-plan.md
.github/workflows/: ci.yml  pages.yml
benchmark/: benchmark_manifest.json  complex-benchmark.pptx  vision_benchmark_manifest.json
benchmark/hwp/: corpus.json  package-lock.json  package.json  requirements-pyhwp.txt  requirements.txt  rhwp-native.Dockerfile
docs/: app.js  index.html  rhwp-architecture.md  styles.css
infra/: main.bicep  main.json  main.parameters.json
infra/modules/: foundry.bicep  pg-autostart.bicep  platform.bicep
scripts/: configure_copilot_connection.py  configure_test_library.py  fetch_mip_sdk.py  fetch_ocr_model.py  grant_test_site_permission.ps1  provision_test_library_admin.ps1
sharepoint/: status-column-formatting.json
sharepoint/search-enhancement-command/: .yo-rc.json  README.md  package-lock.json  package.json
src/crewmeal/: __init__.py  config.py  hwp_sample_archive.py  libreoffice.py  models.py  rhwp.py  source.py
tests/: test_config.py  test_hwp_sample_archive.py  test_libreoffice.py  test_rhwp.py  test_source.py
tests/search_enhancement/: _low_tier_fixtures.py  _pptx_fixtures.py  test_admin_portal.py  test_analysis_tier.py  test_artifact_store.py  test_auth.py  test_benchmark.py  test_cli.py  test_connector.py  test_db_resilience.py  test_decryption.py  test_diagram_facts.py  test_docx_xlsx_skeleton.py  test_formats.py  test_geometry_facts.py  test_ingest_api.py  (+25 more)
(+88 files in other folders)
