[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "crewmeal"
version = "0.1.0"
description = "Enrich PowerPoint slide content with structured search metadata for a Microsoft Graph search connector."
requires-python = ">=3.11"
dependencies = [
  "azure-identity>=1.25,<2",
  "defusedxml>=0.7,<1",
  "jsonschema>=4.25,<5",
  "openai>=2,<3",
  "pymupdf>=1.26,<2",
  "python-pptx>=1,<2",
  "requests>=2.32,<3",
  "SQLAlchemy>=2,<3",
  "psycopg[binary]>=3.2,<4",
  "azure-storage-blob>=12,<13",
  "azure-keyvault-secrets>=4,<5",
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
  "jinja2>=3.1,<4",
  "python-multipart>=0.0.9,<1",
  "itsdangerous>=2.2,<3",
  "PyJWT[crypto]>=2.8,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<10",
  "httpx>=0.27,<1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"crewmeal.search_enhancement.web" = ["templates/**/*.html"]
"crewmeal.search_enhancement" = ["schemas/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
